2001-09-19  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-logout): Reset counters in EicqWharf to zero.
	(eicq-logout): Test for EicqWharf before trying to reset it.

2001-09-17  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-logout): Do a 'eicq-world-update' and
	'eicq-send-contact-list' to reset the buddy buffer to it's
	"pre-logged-in-state". 

2001-09-16  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-show-window): Emergency fix - I left out a
	'select-frame'. 
	(eicq-disconnect): Emergency fix - Uncomment something I'd
	commented out for debugging purposes.
	(eicq-do-kicked-out): Test for 'eicq-user-password', don't attempt
	auto-reconnect if it's nil.

2001-09-15  Steve Youngs  <youngs@xemacs.org>

	* Version 0.2.16 released.

	* README: Add comments about EicqWharf and starting Eicq in a new
	frame. 

	* eicq.el (eicq-save-log-on-exit-p): New.
	(eicq-disconnect): Use 'eicq-save-log-on-exit-p'.  And don't
	prompt to save the buffer, just kill it.
	(eicq-disconnect): Only delete the wharf frame if it's loaded.
	(eicq-show-window): Create the wharf frame after all the other
	Eicq buffers have been created, and then only if it's needed.
	(eicq-do-meta-user-general): A little nicer output.

2001-09-13  Steve Youngs  <youngs@xemacs.org>

	* eicq.el: Autoload 'eicq-wharf-new-frame' to kill off a
	byte-compile warning.
	(eicq-idle-reply): Set 'eicq-auto-reply-p' so we
	auto-online when we should.

2001-09-11  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-auto-reply): Use a modified subset of
	'eicq-send-message-helper' so the outgoing message doesn't get
	logged.  Instead use 'eicq-log-system "Automatic response sent."'
	(eicq-idle-reply): Ditto.

2001-09-07  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-do-kicked-out): Attempt auto-reconnect.

2001-09-02  Steve Youngs  <youngs@xemacs.org>

	* eicq-report.el: Require 'message. 

	* eicq.el (eicq-face-online): Remove background colour to make it
	look better for light backgrounds.